ST-354 Extend `6.9` RN based on internal '6.9 release review'

--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -33,7 +33,7 @@ description: In this section, you can find the release notes for v6.9 releases.
   [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
   If you would like assistance, please contact your Solution Architect.
 
-## v6.9.7 (August 08th, 2024; GA)
+## v6.9.7 (August 8th, 2024; GA)
 
 ```
 SHA256 (ipfabric-update-6-9-7+0.tar.gz.sig) = b23860a5bf0822995c78552f24ac390238f85280d67d0187482e5bf8d07ac69c
@@ -48,13 +48,15 @@ MD5 (ipfabric-6-9-7+0.vmdk) = addb7058c0551b4e0308ee6db5eb7c59
 
 ### Security Fixes
 
-- Fixed the issue with enable passwords being logged in plaintext in the CLI log
-  while discovering Opengear devices with the `Neighbors` task enabled. For
-  details and remediation, please see 
-  [NIM-13396: Opengear – Prevent `sudo` Password From Being Logged](../../support/security_bulletins.md#nim-13396-opengear-prevent-sudo-password-from-being-logged)
-  in our Security Bulletin.
+#### Opengear Enable Passwords
 
-### Authentication
+The issue with enable passwords being logged in plaintext in the CLI log while
+discovering Opengear devices with the `Neighbors` task enabled has been fixed.
+For details and remediation, please see
+[NIM-13396: Opengear – Prevent `sudo` Password From Being Logged](../../support/security_bulletins.md#nim-13396-opengear-prevent-sudo-password-from-being-logged)
+in our Security Bulletin.
+
+#### Authentication Tokens
 
 `accessToken` and `refreshToken` have been removed from the response body of all
 endpoints (`/auth/login`, `/auth/token`, and `/auth/token/swap`) as a security
@@ -64,87 +66,239 @@ more details, see [Token API](../../IP_Fabric_API/authentication.md#token-api).
 
 ### Network Discovery
 
+#### Vendor Support and Improvements
+
 - Versa -- LLDP support was added.
 - Stormshield (SN) -- Support for filter (firewall) rules was added.
 - Brocade (FastIron) -- NTP support was added.
 - Fortinet FortiGate -- SD-WAN support was added. For more details, see
   [Fortinet SD-WAN Known Issues](../../support/known_issues/Vendors/fortinet/sdwan.md).
+- Citrix NetScaler ADC
+  - Discovery has been permanently added to the product, so the
+    [feature flag is no longer needed](../../System_Administration/Command_Line_Interface/Feature_Flags.md#citrix-netscaler-adc-discovery-removed-in-69).
+  - Data collection for each ADC partition (routing, L3 interfaces, PBR, ARP,
+    and virtual servers) was added.
 - Overloaded server detection for HTTP/HTTPS-based Vendor APIs was improved.
+
+### Performance Improvements
+
+#### Post-Discovery Calculations
+
+The following improvements were made in post-discovery caculations:
+
+- Memory optimizations when saving STP edges.
+- Increased speed of VLAN-related database queries.
+
+#### Configuration Management
+
+The speed of Configuration Management processing was improved by increasing the
+number of devices being processed by a single `syslogWorker`. The default number
+of CLI connections was increased from 10 to 80. If you need to lower the default
+value, please [contact our Support team](https://support.ipfabric.io).
 
 ### Frontend
 
 #### Simplified Vendor API Credential Management
-- In this release, we’ve streamlined the process for managing Vendor API credentials.
-  Now, when editing Vendor API settings, it is no longer needed to re-enter credentials each time.
+
+- In this release, we have streamlined the process for managing Vendor API
+  credentials. When editing Vendor API settings, it is no longer needed to 
+  re-enter credentials each time.
+
+### Settings
+
+#### Advanced CLI
+
+- The **Authentication failure** field (how many times to retry a connection
+  when it fails on authentication) now has an increased maximum value of 5
+  (previously 2). The default value remains 0.
+- New timeout settings have been added:
+    - [**Network device authentication timeout**](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/advanced_cli.md#network-device-authentication-timeout)
+      - How many seconds to wait for the login prompt to appear.
+      - The default value is 300 seconds.
+    - [**Command response timeout**](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/advanced_cli.md#command-response-timeout)
+      - How many minutes to wait for a device to finish sending the response to 
+        a command.
+      - The default value is 180 minutes.
+
+#### Device Credentials
+
+In global
+([**Settings --> Discovery & Snapshots --> Discovery Settings --> Device Credentials**](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/device_credentials.md#configure-network-infrastructure-access))
+and per-snapshot
+([**Discovery Snapshot --> (specific snapshot) --> Settings --> Device Credentials**](../../IP_Fabric_GUI/discovery_snapshot.md#snapshot-specific-settings))
+settings, usernames and passwords now accept only ASCII printable characters.
+Validation has been added to the credentials input.
+
+### Technology Tables
+
+#### Device Data in JSON
+
+Device data can be now downloaded in JSON format. These are device data processed (parsed) by IP Fabric
+from the CLI logs, which are used when devices are added to IP Fabric during snapshot discovery or load.
+
+![Device JSON download](./6.9/JSON_download.png)
+
+#### Device Discovery Duration
+
+Start and end timestamps of individual device discovery have been added, and
+these data are shown in new columns of the `Device Inventory` table (in
+**Inventory --> Devices**):
+
+![Discovery timestamps](./6.9/discovery-timestamps.png)
+
+#### Technology --> SDWAN --> Versa
+
+The **Technology --> SDWAN** section of the GUI was previously dedicated to
+Versa SDWAN information only. In upcoming releases, this section will be
+enriched by data from other SDWAN vendors. For this reason, a separate page for
+Versa has been created.
+
+![SDWAN Versa](./6.9/SDWAN_Versa.png)
+
+### Path Lookup
+
+#### Topology Improvements
+
+- Neighbor calculation in STP over ACI scenarios has been improved.
+- Fixed host-to-gateway simulation for wireless hosts connected to an AP.
+- More realistic handling of VRF leaks in BGP routes.
+- Fixed inconsistency in the graph comparison feature, where the same topology
+  graph edges across two snapshots could be falsely reported as changed.
+
+#### Security and ACI Improvements
+
+- Rules received via API were not ordered correctly; they are now properly
+  ordered by IP Fabric.
+- Implicit and default rules can have the same priority and match the same
+  traffic; implicit rules are now evaluated as the last ones.
+- More accurate security evaluation for tunnels using zone firewalls.
+- Improved security evaluation on spines where no endpoints are connected, and
+  on leafs where no information about the endpoint's group is present.
+- Improved handling of source and destination groups in ACI ACL rules.
+- Improved handling of VXLAN network identifiers (`VNI`s) in output security
+  evaluation.
+
+### Appliance OS-Level Improvements
+
+- The `nimpee-net-config` command for the First Boot Wizard has been changed to
+  `ipf-cli-config`. Additionally, the First Boot Wizard is now referred to as 
+  IPF CLI Config.
+- Jumphost services have been renamed from `jumphost@<ID>.service` to
+  `ipf-jumphost@<ID>.service` (with the addition of the `ipf-` prefix).
 
 ### Other Changes
 
-- **Settings --> Discovery & Snapshots --> Discovery Settings --> Advanced CLI
-  --> CLI Settings**
-  - The **Authentication failure** field (how many times to retry a connection 
-    when it fails on authentication) now has an increased maximum value (5,
-    previously 2). The default value is still 0.
-  - The option to amend **Network device authentication timeout** (how many
-    seconds to wait for the login prompt to appear) was added. The default value 
-    is 300 seconds.
-  - The option to amend **Command response timeout** (how many minutes to wait
-    for a device to finish sending the response to a command) was added. The
-    default value is 180 minutes.
-- **Settings --> Discovery & Snapshots --> Discovery Settings --> Device
-  Credentials**
-  - Usernames & passwords accept ASCII printable characters only.
-- **Discovery Snapshot --> (specific snapshot) --> Settings --> Device
-  Credentials**
-  - Usernames & passwords accept ASCII printable characters only.
-- **Inventory --> Devices --> Device Details**
-  - The option to download device data in JSON format was added.
-- The `nimpee-net-config` command for the First Boot Wizard has changed to
-  `ipf-cli-config`. Also, the First Boot Wizard is now known as IPF CLI Config.
-- Jumphost services have been renamed from `jumphost@<ID>.service` to
-  `ipf-jumphost@<ID>.service` (adding the `ipf-` prefix).
-- Path-lookup topology improvements:
-  - neighbor calculation in STP over ACI scenarios,
-  - fixed host-to-gateway simulation for wireless hosts connected to AP,
-  - more realistic handling of VRF leaks in BGP routes.
-- Path-lookup security & ACI improvements:
-  - more accurate security evaluation for tunnels using zone firewalls,
-  - improved handling of source & destination groups in ACI ACL rules,
-  - improved handling of VXLAN network identifiers (VNI's) in output security evaluation,
-- DB performance improvements:
-  - memory optimizations when saving STP edges,
-  - sped up VLAN-related DB queries.
-- Added start and end timestamps of individual device discovery, data shown
-  in new columns of **Inventory --> Devices** table:
-  ![Discovery Timestamps](./6.9/discovery-timestamps.png)
+- Maintenance has been enhanced to remove snapshot data from the database that
+  is no longer loaded in the IP Fabric appliance. Previously, this data could
+  occasionally remain in the database, leading to increased memory resource
+  requirements.
 
 ### Experimental Features
 
 Newly added features that need to be explicitly enabled in service files. If
 you are interested in trying them out, please contact our Support or Solution
-Architect team, and we will gladly help you with enabling these features.
+Architect team, and we will gladly assist you with enabling these features.
 
-- VeloCloud
-  - Basic device info support was added as Proof of Concept (PoC) and needs to
-    be enabled manually (`ENABLE_DISCOVERY_DEVICES_VELOCLOUD`).
+#### VeloCloud
+
+- Basic device info support has been added as a Proof of Concept (PoC) and needs
+  to be [enabled manually via a feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#velocloud-discovery) (`ENABLE_DISCOVERY_DEVICES_VELOCLOUD`).
 
 ### Known Issues
+
+#### Fortinet NAT44 and Zone Firewall Cause Discovery Issues in Version `6.9.x`
+
+Temporarily disabling both `NAT44` and `Zone firewall` discovery tasks for the
+`fortigate` **Family** (in **Settings --> Discovery & Snapshots --> Discovery
+Settings --> Disabled Discovery Tasks**) is the recommended hotfix until this
+issue is resolved in one of the upcoming releases.
+
+![Disabled Discovery Tasks](./6.9/disabled_task_list.png)
+
+![Disable Zone firewall discovery task for FortiGate](./6.9/disabled_task_forti_zonefw.png)
+
+![Disable NAT44 discovery task for FortiGate](./6.9/disabled_task_forti_nat44.png)
 
 #### Failing Upgrade to Version `6.9.4`
 
 A bug was identified on IP Fabric appliances with initial deployment versions
-`4.3.x` and earlier.
+`4.3.x` or earlier.
 
 During the upgrade process to version `6.9.4`, the installation of the
 `ipf-ethx` package fails, causing the entire upgrade process to stop.
 
-This issue was fixed as part of the `6.9.6` release.
+This issue was fixed in the `6.9.6` release.
 
 #### Bug Affecting Online Upgrade in Versions `6.9.4` and `6.9.6`
 
 A critical bug was identified in the `6.9.4` and `6.9.6` releases, impacting the
-online upgrade process to the next release. As a result, only manual upgrades
+online upgrade process to a next release. As a result, only manual upgrades
 are possible for the affected versions.
 
 Versions `6.8.x` and earlier remain unaffected by this issue.
 
-This issue was fixed as part of the `6.9.7` release.
+This issue was fixed in the `6.9.7` release.
+
+#### Failing Upgrade to `6.9.x` in Azure Environment
+
+We have identified an issue with upgrading IP Fabric in the Azure environment
+from any older versions to `6.9.x`.
+
+The upgrade process becomes stuck at installing the `waagent` package, which
+blocks the upgrade of all `ipf-` packages that now depend on it.
+
+The issue arises because `6.9.x` attempts to install `waagent`, but this package
+is native to Azure and is already installed by default on any Linux VMs in
+Azure.
+
+To resolve the issue, follow these steps:
+
+1. Connect to the Azure instance via SSH as the `osadmin` user and run the
+   following commands:
+
+   ```shell
+   sudo su -
+   dpkg -l | grep -e '||/ Name' -e 'ipf-' # Check the status of the ipf- packages and their versions
+   cp -p /var/lib/waagent/ovf-env.xml /root/
+   systemctl stop walinuxagent.service
+   rm -Rf /var/lib/waagent/
+   apt install waagent # The command will appear stuck, but please let it run
+   ```
+
+2. Open another SSH session to the Azure instance in a different window, log in
+   as `osadmin`, and run the following commands:
+
+   ```shell
+   sudo su -
+   cp -p /root/ovf-env.xml /var/lib/waagent/
+   ```
+
+3. Once the `apt install waagent` command finishes, reboot the Azure instance
+   by running the following command in any of the SSH sessions:
+
+   ```shell
+   reboot
+   ```
+
+4. After the Azure instance fully reboots, connect to it again via SSH as
+   `osadmin` and re-check the status of the `ipf-` packages and their versions
+   with the following command:
+
+   ```shell
+   dpkg -l | grep -e '||/ Name' -e 'ipf-'
+   ```
+
+   In the first column of the command output, you should see only `ii`.
+
+   In the third column, you should see `6.9.x+y`, except for the following 
+   `ipf-` packages, which have different versioning schemes:
+
+   - `ipf-checker`
+   - `ipf-cli-config`
+   - `ipf-dex`
+   - `ipf-ethx`
+   - `ipf-jumphost`
+   - `ipf-techsupport-exporter`
+
+If you are unsure how to proceed or encounter any issues, please
+[contact our Support team](https://support.ipfabric.io).
