NIM-13916: updated RL

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -74,6 +74,12 @@ The following column names have been changed:
 
     `https://<IPF_IP_or_FQDN>/inventory/os-versions?options={"filters":{"and":[{"version":["eq","15.5(2)T"]},{"platform":["eq","i86bi_linux"]}]}}`
 
+### Technology Tables
+
+- SDWAN -- New vendor specific tables were added under **Technology --> SDWAN** menu. Support for [Cisco Viptela](../../IP_Fabric_GUI/technology_tables/SDWAN/viptela.md) and [Silverpeak](../../IP_Fabric_GUI/technology_tables/SDWAN/silverpeak.md) was added.
+
+![SDWAN Menu](./7.0/SDWAN_Viptela_SP.png)
+
 ### Network Discovery
 
 #### Vendor Support
@@ -126,5 +132,6 @@ Newly added features that need to be explicitly enabled in service files. If
 you are interested in trying them out, please contact our Support or Solution
 Architect team, and we will gladly help you with enabling these features.
 
-- VeloCloud
-  - VeloCloud discovery has been enhanced with basic networking support. To enable VeloCloud discovery, you must [manually activate the feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#velocloud-discovery) (`ENABLE_DISCOVERY_DEVICES_VELOCLOUD`).
+#### VeloCloud
+
+- VeloCloud discovery has been enhanced with basic networking support. To enable VeloCloud discovery, you must [manually activate the feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags/#velocloud-discovery) (`ENABLE_DISCOVERY_DEVICES_VELOCLOUD`).
