NIM-15698 Document token endpoints being accessed without specifying API version since `7.0`

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -39,6 +39,12 @@ The following endpoints have been permanently removed:
 - `technology/addresing/path-lookup-sources`
 - `technology/attributes/summary`
 
+You can no longer reach token endpoints with the specified API version:
+
+- `<API_VERSION>/auth/token`
+
+Use `auth/token` instead.
+
 ##### Removed Properties in Endpoints
 
 - `networks/policies/routing/interfaces` removed property `status`
