ST-354 `6.9` RN - Fix formatting in `Advanced CLI` - backport to `release/6.9`

--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -112,13 +112,13 @@ value, please [contact our Support team](https://support.ipfabric.io).
   when it fails on authentication) now has an increased maximum value of 5
   (previously 2). The default value remains 0.
 - New timeout settings have been added:
-    - [**Network device authentication timeout**](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/advanced_cli.md#network-device-authentication-timeout)
-      - How many seconds to wait for the login prompt to appear.
-      - The default value is 300 seconds.
-    - [**Command response timeout**](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/advanced_cli.md#command-response-timeout)
-      - How many minutes to wait for a device to finish sending the response to 
-        a command.
-      - The default value is 180 minutes.
+   - [**Network device authentication timeout**](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/advanced_cli.md#network-device-authentication-timeout)
+    - How many seconds to wait for the login prompt to appear.
+    - The default value is 300 seconds.
+   - [**Command response timeout**](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/advanced_cli.md#command-response-timeout)
+    - How many minutes to wait for a device to finish sending the response to a 
+      command.
+    - The default value is 180 minutes.
 
 #### Device Credentials
 
@@ -188,10 +188,10 @@ Versa has been created.
 
 ### Other Changes
 
-- Maintenance has been enhanced to remove snapshot data from the database that
-  is no longer loaded in the IP Fabric appliance. Previously, this data could
-  occasionally remain in the database, leading to increased memory resource
-  requirements.
+- System Maintenance has been enhanced to remove snapshot data from the database
+  that is no longer loaded in the IP Fabric appliance. Previously, this data
+  could occasionally remain in the database, leading to increased memory
+  resource requirements.
 
 ### Experimental Features
 
