Squashed commit of the following:
commit d6d5d323a8451acaf1cb4d4a3eb81819c792a6d8
Author: Antonin Kral <antonin.kral@ipfabric.io>
Date:   Tue Sep 3 08:53:42 2024 +0200

    SD-564
    small fixes

commit 94c185379331be6757152ef5483cc98b24274be0
Author: Antonin Kral <antonin.kral@ipfabric.io>
Date:   Tue Sep 3 08:50:07 2024 +0200

    SD-564 Fix Release Notes

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -24,39 +24,31 @@ Several API endpoints have been updated or removed in this major release.
 
 ##### Replaced Endpoints
 
-- `technology/sdwan/links` has been replaced by `technology/sdwan/versa/links`
-- `technology/sdwan/sites` has been replaced by `technology/sdwan/versa/sites`
-- `technology/load-balancing/f5-partitions` has been replaced by `technology/load-balancing/partitions`
-- `technology/mpls/l2vpn/curcit-cross-connect` has been replaced by `technology/mpls/l2vpn/circuit-cross-connect`
+- `/tables/sdwan/links` has been replaced by `/tables/sdwan/versa/links`
+- `/tables/sdwan/sites` has been replaced by `/tables/sdwan/versa/sites`
+- `/tables/load-balancing/f5-partitions` has been replaced by `/tables/load-balancing/partitions`
+- `/tables/mpls/l2vpn/curcit-cross-connect` has been replaced by `/tables/mpls/l2vpn/circuit-cross-connect`
+- `/tables/cloud/virtual-machines-interfaces` has been replaced by `/tables/cloud/endpoints/virtual-machines-interfaces`
+- `/tables/cloud/virtual-machines` has been replaced by `/tables/cloud/endpoints/virtual-machines`
+- `/tables/management/osver-consistency` has been replaced by:
+  - `/tables/inventory/os-version-consistency/platforms`
+  - `/tables/inventory/os-version-consistency/models`
+
+API version is no longer part of the token endpoint, rendering the following path inaccessible:
+
+- `<API_VERSION>/auth/token` (use `/auth/token` instead)
 
 ##### Removed Endpoints
 
 The following endpoints have been permanently removed:
 
-- `technology/networks/domain`
-- `technology/spanning-tree/radius`
-- `technology/spanning-tree/topology`
-- `technology/addresing/path-lookup-sources`
-- `technology/attributes/summary`
+- `/tables/networks/domain`
+- `/tables/spanning-tree/radius`
+- `/tables/spanning-tree/topology`
+- `/tables/addresing/path-lookup-sources`
+- `/tables/attributes/summary`
 
-You can no longer reach token endpoints with the specified API version:
-
-- `<API_VERSION>/auth/token`
-
-Use `auth/token` instead.
-
-##### Removed Properties in Endpoints
-
-- `networks/policies/routing/interfaces` removed property `status`
-- `inventory/devices` removed property `mac`
-
-#### Changes in columns
-
-##### Removed Column
-
-The `mac` column in the Device Inventory table (`/tables/inventory/devices`) has been removed.
-
-##### Replaced Columns
+#### Replaced Endpoint Properties
 
 The following column names have been changed:
 
@@ -69,9 +61,17 @@ The following column names have been changed:
     status causing the data to incorrectly mark some sources as not reachable.  These columns
     were renamed to more accurately describe their property.
 
+#### Removed Endpoint Properties
+
+The following properties have been removed from tables:
+
+- `/tables/networks/policies/routing/interfaces`: `status`
+- `/tables/inventory/devices`: `mac`
+
 #### Removed alias `f` in URLs
 
 - Support for `f` as an alias for `filters` in table URLs has been dropped.
+
   - This URL is **no longer** supported:
 
     `https://<IPF_IP_or_FQDN>/inventory/os-versions?options={"f":{"and":[{"version":["eq","15.5(2)T"]},{"platform":["eq","i86bi_linux"]}]}}`
@@ -108,7 +108,7 @@ The following column names have been changed:
 
 ### Frontend
 
-#### Sharable links 
+#### Sharable links
 
 - Added support for
   [URL links that point to a specific snapshot](../../IP_Fabric_GUI/discovery_snapshot.md#create-url-pointing-to-specific-snapshot).
@@ -130,7 +130,32 @@ The following column names have been changed:
 - `docker` runtime was added to the appliance.
 - PostgreSQL 15 was added to the appliance.
 - New script in `/opt/ipf-debian-repositories/bin/ipf-debian-repositories.sh` can be
- [used to re-enable Debian repositories](../../System_Administration/Command_Line_Interface/How_to/add_system_repositories.md).
+  [used to re-enable Debian repositories](../../System_Administration/Command_Line_Interface/How_to/add_system_repositories.md).
+
+### New Tables
+
+The following new tables have been added to the product (in addition to the ones listed in
+[Replaced Endpoints](#replaced-endpoints). Please ensure if using custom RBAC you review your policies and roles to
+ensure your users have appropriate permissions to view these if allowed.
+
+- `/tables/routing/protocols/bgp/routes`
+- `/tables/cloud/vendors/aws/inventory`
+- `/tables/cloud/vendors/azure/inventory`
+- `/tables/cloud/vendors/gcp/inventory`
+- `/tables/cloud/nodes/inventory`
+- `/tables/cloud/nodes/tags`
+- `/tables/sdwan/silverpeak/overlay`
+- `/tables/sdwan/silverpeak/underlay`
+- `/tables/sdwan/viptela/bfd-sessions`
+- `/tables/sdwan/viptela/bfd-summary`
+- `/tables/sdwan/viptela/control-connections`
+
+!!! note "Solution Architect Managed RBAC"
+
+    The Solution Architect team has published a
+    [managed RBAC configuration](https://gitlab.com/ip-fabric/integrations/python-ipfabric/-/blob/develop/examples/settings/RBAC/managed_rbac.py?ref_type=heads)
+    located in the Python SDK which is updated on every major and minor release.  This should be run after every upgrade
+    if you decide to use these policies and roles.
 
 ### Experimental Features
 
@@ -138,6 +163,5 @@ Newly added features that need to be explicitly enabled in service files. If
 you are interested in trying them out, please contact our Support or Solution
 Architect team, and we will gladly help you with enabling these features.
 
-#### VeloCloud
-
-- VeloCloud discovery has been enhanced with basic networking support. To enable VeloCloud discovery, you must [manually activate the feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags/#velocloud-discovery) (`ENABLE_DISCOVERY_DEVICES_VELOCLOUD`).
+- VeloCloud
+  - VeloCloud discovery has been enhanced with basic networking support. To enable VeloCloud discovery, you must [manually activate the feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#velocloud-discovery) (`ENABLE_DISCOVERY_DEVICES_VELOCLOUD`).
