--- a/docs/releases/release_notes_low-level/6.x/6.6.x/6.6.3.md
+++ b/docs/releases/release_notes_low-level/6.x/6.6.x/6.6.3.md
@@ -1,5 +1,7 @@
 ---
 description: IP Fabric automatically generated low-level release notes for version 6.6.3.
+search:
+  boost: 0.5
 ---
 
 # LLRN 6.6.3
