--- a/docs/releases/release_notes_low-level/4.x/4.4.x/4.4.0.md
+++ b/docs/releases/release_notes_low-level/4.x/4.4.x/4.4.0.md
@@ -1,10 +1,12 @@
 ---
 description: IP Fabric automatically generated low-level release notes for version 4.4.0.
+search:
+  boost: 0.5
 ---
 
 # LLRN 4.4.0
 
-These are low-level release notes for IP Fabric release `4.4.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 166 issues.
+These are low-level release notes for IP Fabric release `4.4.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 165 issues.
 
 ## Epics
 
@@ -172,7 +174,6 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-7548` -- Medium -- Vendor API clients stability tweaks
 - `NIM-7563` -- Highest -- Rename junipermist to juniper-mist
 - `NIM-7673` -- Medium -- Ruckus device discovery - filter out pre-prevision devices that are not connected
-- `NIM-7674` -- Highest -- Ensure devType is always set for wireless AP
 - `DOS-152` -- Medium -- Provide basic syslog configuration for a new target
 - `DOS-302` -- Medium -- Fix AWS permissions for new LABs
 - `DOS-319` -- Highest -- Update of API breaks manual SSO configuration
