--- a/docs/releases/release_notes_low-level/6.x/6.2.x/6.2.1.md
+++ b/docs/releases/release_notes_low-level/6.x/6.2.x/6.2.1.md
@@ -1,5 +1,7 @@
 ---
 description: IP Fabric automatically generated low-level release notes for version 6.2.1.
+search:
+  boost: 0.5
 ---
 
 # LLRN 6.2.1
