NIM-15691 Introduce device filters docs

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -157,6 +157,11 @@ ensure your users have appropriate permissions to view these if allowed.
     located in the Python SDK which is updated on every major and minor release.  This should be run after every upgrade
     if you decide to use these policies and roles.
 
+### Device-based Advanced Filters
+
+In many **Technology** and **Inventory** tables, you can now use advanced filters
+  based on device properties like **Vendor**, **Family**, **Model**, **Version**. For full properties and tables list refer to [Device-based advanced filters](../../IP_Fabric_GUI/technology_tables/index.md#device-based-advanced-filters).
+
 ### Experimental Features
 
 Newly added features that need to be explicitly enabled in service files. If
