Update 6.10 - Adding note about API endpoint deprecation

--- a/docs/releases/release_notes/6.10.md
+++ b/docs/releases/release_notes/6.10.md
@@ -16,6 +16,14 @@ tags: ["draft"]
 
 ## v6.10.0 (UNRELEASED)
 
+### API Endpoints Deprecation
+
+The below API endpoints have been marked as deprecated and the intention is to remove them in the next major version `7.0`.
+
+- `/tables/interfaces/transfer-rates/*`
+- `/tables/interfaces/errors/*` except for `/tables/interfaces/errors/disabled`
+- `/tables/interfaces/drops/*`
+
 ### Network Discovery
 
 #### Improvements
