NIM-15780: Extended Cisco APIC API client logging doc

--- a/docs/releases/release_notes/6.10.md
+++ b/docs/releases/release_notes/6.10.md
@@ -16,16 +16,49 @@ tags: ["draft"]
 
 ## v6.10.0 (UNRELEASED)
 
-### API Endpoints Deprecation
+### Breaking Changes
 
-The below API endpoints have been marked as deprecated and the intention is to remove them in the next major version `7.0`.
+#### API Endpoints Deprecation
+
+The below API endpoints have been marked as deprecated and the intention is to
+remove them in the next major version `7.0`.
 
 - `/tables/interfaces/transfer-rates/*`
 - `/tables/interfaces/errors/*` except for `/tables/interfaces/errors/disabled`
 - `/tables/interfaces/drops/*`
 
+### Security Fixes
+
 ### Network Discovery
 
-#### Improvements
+#### Vendor Support and Improvements
 
-- Versa -- Routing table processing speed has been dramatically improved, resulting performance boost in order of magnitude. This significant enhancement resolves issues with discovery getting stuck when processing very large routing tables.
+- Cisco APIC -- when an unsupported class is received in API response, the
+  unsupported class is removed in the next request. Previously, this
+functionality did not work when the `returnPartialData` configuration parameter
+was set to `true`. This issue has been fixed in this release.
+
+### Performance Improvements
+
+#### Versa Routing Table Processing
+
+The processing speed of routing tables has been dramatically improved, resulting
+in a significant performance boost. This enhancement resolves issues where
+discovery process would get stuck when processing very large routing tables.
+
+### Frontend
+
+### Settings
+
+### Technology Tables
+
+### Path Lookup
+
+### Appliance OS-Level Improvements
+
+### Other Changes
+
+- Cisco APIC vendor API client logging was extended.
+
+### Experimental Features
+
