NIM-15990 Show data before discovery finishes

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -108,6 +108,12 @@ The following properties have been removed from tables:
 
 ### Frontend
 
+#### Available data for incomplete snapshots
+
+GUI now shows available data (tables, diagrams) for snapshots that are still in progress or in error state.
+Note that those data may be incomplete, and it may even take some time for a device to appear in Devices table
+after it is discovered, but still most of the data are usually available much earlier before discovery finishes.    
+
 #### Sharable links
 
 - Added support for
