Add rapidoc entry to rel 7.0 notes

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -168,6 +168,12 @@ ensure your users have appropriate permissions to view these if allowed.
 In many **Technology** and **Inventory** tables, you can now use advanced filters
   based on device properties like **Vendor**, **Family**, **Model**, **Version**. For full properties and tables list refer to [Device-based advanced filters](../../IP_Fabric_GUI/technology_tables/index.md#device-based-advanced-filters).
 
+### Interactive API Documentation
+
+We're excited to introduce an interactive API documentation powered by RapiDoc, now available at `https://<host>/api/rapidoc`!
+
+This new feature offers comprehensive documentation for all API endpoints, including predefined schemas. It allows you to explore and test the API's capabilities directly from your browser. By adding this feature, we aim to enhance your development experience and simplify the integration process.
+
 ### Experimental Features
 
 Newly added features that need to be explicitly enabled in service files. If
