NIM-11678 Adds info about the intent check fix into 7.0 release notes

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -82,9 +82,17 @@ The following properties have been removed from tables:
 
 ### Technology Tables
 
-- SDWAN -- New vendor specific tables were added under **Technology --> SDWAN** menu. Support for [Cisco Viptela](../../IP_Fabric_GUI/technology_tables/SDWAN/viptela.md) and [Silverpeak](../../IP_Fabric_GUI/technology_tables/SDWAN/silverpeak.md) was added.
+#### SDWAN
+
+New vendor specific tables were added under **Technology --> SDWAN** menu. Support for [Cisco Viptela](../../IP_Fabric_GUI/technology_tables/SDWAN/viptela.md) and [Silverpeak](../../IP_Fabric_GUI/technology_tables/SDWAN/silverpeak.md) was added.
 
 ![SDWAN Menu](./7.0/SDWAN_Viptela_SP.png)
+
+#### RP Mappings groups
+
+A potential issue was resolved where intent verification rules might have incorrectly highlighted rows in the table for certain data sets in **Technology --> Multicast --> RP --> RP Mappings groups**. This was addressed by ensuring that the ID of each individual row is now truly unique.
+
+**If intent verification rules are already configured for this table**, it may be necessary to perform a **snapshot unload and reload** to ensure the existing intent rules function properly.
 
 ### Network Discovery
 
