NIM-15961: release notes for RateLimiter tweaks

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -114,6 +114,12 @@ A potential issue was resolved where intent verification rules might have incorr
   - If you previously configured `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP`, you
     will have to manually set the subnets in the GUI again.
 
+##### NSX-T Rate Limiter
+
+A bug was discovered in the NSX-T API rate limiter, where in rare cases, it was not being enforced. This led to the NSX-T server becoming overloaded, resulting in unsuccessful discovery.
+
+The statistical logs for all Vendor APIs have been enhanced to now include the number of requests sent per time period.
+
 ### Frontend
 
 #### Available data for incomplete snapshots
