--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -47,6 +47,9 @@ The following endpoints have been permanently removed:
 - `/tables/spanning-tree/topology`
 - `/tables/addresing/path-lookup-sources`
 - `/tables/attributes/summary`
+- `/tables/interfaces/transfer-rates/*`
+- `/tables/interfaces/errors/*` except for `/tables/interfaces/errors/disabled`
+- `/tables/interfaces/drops/*`
 
 #### Replaced Endpoint Properties
 
@@ -140,6 +143,14 @@ after it is discovered, but still most of the data are usually available much ea
 #### Versa
 
 - Support for configuration backup was added for Versa devices when the discovery is running in [Combined (CLI+API) discovery mode](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Versa_Networks_SD-WAN.md).
+
+#### Removed tables
+
+The following tables have been removed from the product.
+
+- `Technology - Interfaces - Average Rates - Data`
+- `Technology - Interfaces - Average Rates - Errors`
+- `Technology - Interfaces - Average Rates - Drops`
 
 ### Other Changes
 
