NIM-15934 docs/ adding stormshield nat info to RN and known issues

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -104,7 +104,9 @@ A potential issue was resolved where intent verification rules might have incorr
 - Check Point -- Identity awareness collecting was updated with a new extended
   command. For more details, see
   [Checkpoint Known Issues](../../support/known_issues/Vendors/checkpoint.md).
-
+- Stormshield
+  - Support for the collection of NAT rules has been added.
+  - Starting from the 7.0 release, Stormshield devices are now discovered automatically, and the feature flag no longer needs to be enabled.
 #### Improvements
 
 - [Site Separation](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/site_separation.md)
