NIM-15972 ACI actrlRule paging

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -107,17 +107,28 @@ A potential issue was resolved where intent verification rules might have incorr
 - Stormshield
   - Support for the collection of NAT rules has been added.
   - Starting from the 7.0 release, Stormshield devices are now discovered automatically, and the feature flag no longer needs to be enabled.
+
 #### Improvements
 
-- [Site Separation](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/site_separation.md)
-  functionality using regular expressions was improved with the option
-  to build advanced **Site Name** values using template strings.
-- [Duplicate IPs Discovery](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/duplicate_ips_discovery.md),
-  configured since the `6.4` release using the environment variable
-  `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP`, has been promoted to a product
-  feature and can now be set directly in GUI.
-  - If you previously configured `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP`, you
-    will have to manually set the subnets in the GUI again.
+##### Site Separation
+
+The [Site Separation](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/site_separation.md)
+functionality using regular expressions was improved, allowing for the creation
+of advanced **Site Name** values with template strings.
+
+##### Duplicate IP Discovery
+
+Duplicate IPs discovery, initially configured using the environment variable
+`SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP` since the `6.4` release, has now been
+promoted to a product feature. This setting can now be configured [directly in
+the GUI](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/duplicate_ips_discovery.md).
+
+If you previously used the `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP` feature
+flag, you will need to manually reconfigure the subnets in the GUI.
+
+##### `actrlRule` Endpoint Paging
+
+The Cisco APIC `actrlRule` API endpoint now has a default paging size of 50,000 records (previously, the lack of a paging limit led to slow or unsuccessful data collection). The page size can be adjusted using the `ACI_ACTRLRULE_PAGESIZE` configuration flag. Please contact our Support team if you need to lower the default paging size.
 
 ##### NSX-T Rate Limiter
 
